examples/test/testpolicy5861.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy5861
  namespace: namespace2
spec:
  podSelector:
    matchLabels:
      key1: value18
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key3: value36
      podSelector:
        matchLabels:
          key12: value21
          key32: value24
          key18: value28
